# CPlug-Cmake

./: README.md
Dependency/: CMakeLists.txt
Dependency/src/: main.cpp
Globber/: CMakeLists.txt
Globber/src/: main.cpp
Globber/src/lib0/: foo0.cpp  foo0.h
Globber/src/lib1/: foo1.cpp  foo1.h
Globber/src/lib2/: foo2.cpp  foo2.h
HelloCmake/: CMakeLists.txt  REAMDE.md
HelloCmake/src/: main.cpp
LibDemo/: CMakeLists.txt
LibDemo/src/: main.cpp
